Slides and video embedded

--- a/index.html
+++ b/index.html
@@ -121,18 +121,21 @@
 <h2>
 <a id="talk-on-video" class="anchor" href="#talk-on-video" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Talk on video</h2>
 
+      <p>This talk also covers our paper <a href="http://imatge-upc.github.io/retrieval-2016-deepvision/">"Faster R-CNN features for Instance Search"</a> at CVPR 2016 Workshop on DeepVision.</p>
 
-
+<center>
+<iframe src="https://player.vimeo.com/video/165478041" width="640" height="480" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/165478041">2016-05-Seminar-AmaiaSalvador-DeepVision</a> from <a href="https://vimeo.com/gpi">Image Processing Group</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
-
-<p>This talk also covers our paper <a href="http://imatge-upc.github.io/retrieval-2016-deepvision/">"Faster R-CNN features for Instance Search"</a> at CVPR 2016 Workshop on DeepVision.</p>
+      </center>
 
 <h2>
 <a id="slides" class="anchor" href="#slides" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Slides</h2>
 
-<p>  </p><div> <strong> <a href="//www.slideshare.net/xavigiro/convolutional-features-for-instance-search" title="Convolutional Features for Instance Search">Convolutional Features for Instance Search</a> </strong> from <strong><a href="//www.slideshare.net/xavigiro">Xavier Giro</a></strong> </div>
-
 <p>These slides also cover our paper <a href="http://imatge-upc.github.io/retrieval-2016-deepvision/">"Faster R-CNN features for Instance Search"</a> at CVPR 2016 Workshop on DeepVision.</p>
+      
+<center>      
+<iframe src="//www.slideshare.net/slideshow/embed_code/key/lZzb4HdY6OEZ01" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/xavigiro/convolutional-features-for-instance-search" title="Convolutional Features for Instance Search" target="_blank">Convolutional Features for Instance Search</a> </strong> from <strong><a target="_blank" href="//www.slideshare.net/xavigiro">Xavier Giro</a></strong> </div>      
+  </center>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/imatge-upc/retrieval-2016-icmr">Bags of Local Convolutional Features for Scalable Instance Search</a> is maintained by <a href="https://github.com/imatge-upc">imatge-upc</a>.</span>
